--- a/Wedding/css/style.css
+++ b/Wedding/css/style.css
@@ -14,7 +14,7 @@ header {
     width: 100%;
     height: 60px;
     background-color: #123123;
-    z-index: 0;
+    z-index: 10;
 }
 
 header .logo {
@@ -56,8 +56,7 @@ header .util {
 /* #################### 메인 #################### */
 section.main {
     width: 100%;
-    display: flex;
-  
+    display: flex;  
 }
 
 section.main .inner { 
@@ -79,6 +78,8 @@ section.main .img-box .date {
     
     color: white;
     font-size: 40px;
+    height: 15%;
+    
 }
 
 section.main .img-box .ment {
@@ -89,6 +90,7 @@ section.main .img-box .ment {
 
     color: white;
     font-size: 24px;
+    height: 15%;
 }
 
 section.main .img-box img {
@@ -124,13 +126,8 @@ section.profile .grid-container {
     /* ------------> TODO: 여기에 작성 <-------------  */
     display: grid;
     margin-bottom: 20px;
-   
-    /* grid-template-columns : 
-        -Grid 레이아웃의 열의 크기를 지정하는 속성
-        (여기서는 2개의 열의 크기를 auto로 지정)
-    */
     grid-template-columns: auto auto ;      
-    text-align: center;     /* 캐릭터-성명-전화톡아이콘 중앙정렬 */
+    text-align: center;     
 }
 
 section.profile .grid-container .item {
@@ -141,28 +138,13 @@ section.profile .grid-container .item .title {
         힌트: flex 레이아웃을 이용하여 정가운데(수평/수직)로 배치하시오.
     */
     /* ------------> TODO: 여기에 작성 <-------------  */
- 
+    
     column-gap: 20px;
     margin-bottom: 20px;
-/*     flex-basis: 33.3333%;
-    min-width: 33.3333%;
-    */
+
 }
 
-/* flex */
-.row{
-    display: flex;
-    flex-wrap: wrap;
-    /* flex-wrap : 아이템들의 줄바꿈 여부를 지정 */
-    padding: 0 4px;
-}
 
-.col{
- /*    flex-basis: 33.3333%;
-    min-width: 33.3333%; */
-    padding: 0 4px;
-    box-sizing: border-box;
-}
 section.profile .grid-container .item .title span {
 
 }
@@ -177,8 +159,7 @@ section.profile .grid-container .item .icon-box {
     */
     /* ------------> TODO: 여기에 작성 <-------------  */
 
-    column-gap: 30px;
-    
+    column-gap: 30px;    
 }
 
 section.profile .grid-container .item .icon-box img {
@@ -199,7 +180,8 @@ section.gallery .grid-container {
         힌트: 아이템들을 그리드 레이아웃으로 3열로 배치하시오.
     */
     /* ------------> TODO: 여기에 작성 <-------------  */
-    grid-template-columns: auto auto ;
+    display: grid;
+    grid-template-columns: auto auto auto;
     gap: 20px;
     margin-bottom: 60px;
 }
@@ -213,7 +195,9 @@ section.gallery .grid-container .item img {
               이미지가 박스 전체를 커버하도록 지정하시오.
     */
     /* ------------> TODO: 여기에 작성 <-------------  */
-    
+    width: 100%;
+    height: 150px;
+  
 }
 
 /* #################### 갤러리 끝 #################### */
@@ -299,6 +283,7 @@ section.reply .sub-title {
     font-size: 40px;
     text-align: center;
     margin-bottom: 40px;
+
 }
 section.reply .reply-form {
     
@@ -374,7 +359,7 @@ footer .copy {
     /* display: none;  <--- 작업 후 안보이게 하시오. */
     /* ------------> TODO: 여기에 작성 <-------------  */
 
-    
+    float: right;
     width: 340px;
     max-width: 70vw;
     height: 100vh;
@@ -384,8 +369,8 @@ footer .copy {
 
 .side-bar .inner {
     position: relative; 
-    padding: 100px 40px;
-    height: 100%;
+    padding: 60px 40px;
+    height: 90%;    
  }
 .side-bar .inner ul {
     text-align: center;
@@ -396,9 +381,8 @@ footer .copy {
 .side-bar .inner ul li a {
     display: block;
     width: 100%;
-    height: 50px;
-    line-height: 50px;
-
+    height: 60px;
+    line-height: 60px;
 }
 
 .side-bar .inner ul li a:hover {
@@ -421,11 +405,10 @@ footer .copy {
 /* #################### 공통 #################### */
 .common-title {
     width: 100%;
-    margin-bottom: 40px;
+    margin-bottom: 0px;
     display: flex;
     justify-content: center;
-    align-items: center;
-    /* text-align: center; */
+    align-items: center;  
     min-height: 60px;
     color: white;
     background-color: var(--main);
@@ -459,13 +442,21 @@ footer .copy {
 
 
 .btn-box {
-    padding: 15px 20px;
+    padding: 15px 0px;        
+    display: block;       
+    background-color: var(--main); 
+    font-size: 1.0rem;
+    color: rgb(249, 246, 244);
+    margin-top: 20px;  
+    line-height: 30px;    
+    text-align: center;     
 }
 .btn {
     /* 
         힌트: [그림]에 주어진 대로 버튼을 디자인하시오.
     */
     /* ------------> TODO: 여기에 작성 <-------------  */
+
 
 }
 
